# rightclaw

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE.rust.md  Cargo.toml  PROMPT_SYSTEM.md  README.md  cliff.toml  devenv.nix  install.sh  release-plz.toml  seed.md  skills  start.sh  templates
.github/: dependabot.yml
crates/bot/: CHANGELOG.md  Cargo.toml
crates/bot/src/: config_watcher.rs  cron.rs  cron_delivery.rs  error.rs  keepalive.rs  lib.rs  login.rs  reflection.rs  sync.rs  upgrade.rs
crates/bot/src/cc/: attachments_dto.rs  markdown_utils.rs  mod.rs  stream.rs  worker_reply.rs
crates/bot/src/stt/: decode.rs  markers.rs  mod.rs  whisper.rs
crates/bot/src/telegram/: allowlist_commands.rs  attachments.rs  bootstrap_photo.rs  bot.rs  dispatch.rs  filter.rs  handler.rs  invocation.rs  markdown.rs  markdown_tests.rs  memory_alerts.rs  mention.rs  mod.rs  model_command.rs  oauth_callback.rs  prompt.rs  session.rs  stream.rs  worker.rs
crates/bot/tests/: claude_auth_login.rs  claude_login_pty.rs  cron_bg_continuation.rs  cron_immediate.rs  model_command.rs  sandbox_upgrade.rs  webhook_integration.rs
crates/bot/tests/fixtures/: hello.oga
crates/right/: Cargo.toml
crates/right-agent/: Cargo.toml
crates/right-agent/skills/rightmcp/: SKILL.md
crates/right-agent/src/: cron_spec.rs  cron_spec_tests.rs  doctor.rs  doctor_tests.rs  init.rs  lib.rs  openshell.rs  openshell_tests.rs  platform_store_tests.rs  process_group.rs  rebootstrap.rs  test_support.rs
crates/right-agent/src/agent/: destroy.rs  discovery.rs  mod.rs  register.rs  types.rs
crates/right-agent/src/codegen/: agent_def.rs  agent_def_tests.rs  cloudflared.rs  cloudflared_tests.rs  contract.rs  mod.rs  pipeline.rs  policy.rs  process_compose.rs  process_compose_tests.rs  skills.rs
crates/right-agent/src/mcp/: credentials.rs  credentials_auth_token_tests.rs  mod.rs  oauth.rs  proxy.rs  reconnect.rs  refresh.rs  tool_error.rs
crates/right-agent/src/memory/: classify.rs  error.rs  migrations.rs  mod.rs  resilient.rs  retain_queue.rs
crates/right-agent/src/runtime/: mod.rs  pc_client.rs  pc_client_tests.rs  state.rs
crates/right-agent/src/tunnel/: health.rs
crates/right-agent/src/ui/: error.rs  header.rs  prompts.rs  splash.rs  theme.rs
crates/right-agent/src/usage/: aggregate.rs  insert.rs
crates/right-agent/templates/right/agent/: TOOLS.md  agent.yaml
crates/right-agent/tests/: control_master.rs  memory_failure_scenarios.rs  policy_apply.rs  rebootstrap_sandbox.rs  voice_pass.rs
crates/right-agent/tests/common/: mod.rs
crates/right-codegen/: Cargo.toml
crates/right-codegen/skills/rightskills/: SKILL.md
crates/right-codegen/src/: agent_def.rs  agent_def_tests.rs  claude_json.rs  cloudflared.rs  cloudflared_tests.rs  contract.rs  lib.rs  mcp_config.rs  mcp_instructions.rs  pipeline.rs  plugin.rs  policy.rs  process_compose.rs  process_compose_tests.rs  settings.rs  settings_tests.rs  skills.rs  telegram.rs
crates/right-codegen/templates/: cloudflared-config.yml.j2  process-compose.yaml.j2
crates/right-core/: Cargo.toml
crates/right-core/src/: agent_types.rs  error.rs  lib.rs  openshell.rs  openshell_tests.rs  platform_store.rs  platform_store_tests.rs  process_group.rs  runtime_state.rs  stt.rs  test_support.rs  time_constants.rs
crates/right-core/src/config/: mod.rs
crates/right-core/src/ui/: atoms.rs  atoms_tests.rs  error.rs  header.rs  line.rs  line_tests.rs  mod.rs  prompts.rs  recap.rs  recap_tests.rs  splash.rs  splash_tests.rs  theme.rs  theme_tests.rs  writer.rs
crates/right-mcp/: Cargo.toml
crates/right-mcp/src/: credentials_auth_token_tests.rs  lib.rs  oauth.rs  proxy.rs  reconnect.rs  refresh.rs  tool_error.rs
crates/right-memory/: Cargo.toml
crates/right-memory/src/: circuit.rs  error.rs  guard.rs  hindsight.rs  lib.rs  prefetch.rs  resilient.rs  retain_queue.rs
crates/right/src/: aggregator.rs  internal_api.rs  main.rs  memory_server.rs  memory_server_mcp_tests.rs  right_backend.rs  right_backend_tests.rs  wizard.rs
crates/right/tests/: cli_integration.rs  cli_rebootstrap.rs  right_up_requires_tunnel.rs  wizard_brand.rs
crates/rightclaw/: CHANGELOG.md  Cargo.toml  build.rs
crates/rightclaw-cli/: Cargo.toml
crates/rightclaw-cli/src/: aggregator.rs  internal_api.rs  main.rs  memory_server.rs  memory_server_http.rs  memory_server_mcp_tests.rs  memory_server_tests.rs  right_backend.rs  right_backend_tests.rs  wizard.rs
crates/rightclaw-cli/tests/: allowlist_cli.rs  cli_integration.rs  home_isolation.rs
crates/rightclaw/src/: config.rs  cron_spec.rs  doctor.rs  doctor_tests.rs  error.rs  init.rs  lib.rs  openshell.rs  openshell_tests.rs  platform_store.rs  platform_store_tests.rs  process_group.rs  sandbox_exec.rs  stt.rs  test_cleanup.rs  test_support.rs
crates/rightclaw/src/agent/: allowlist.rs  allowlist_tests.rs  destroy.rs  discovery.rs  discovery_tests.rs  mod.rs  types.rs
crates/rightclaw/src/codegen/: agent_def.rs  agent_def_tests.rs  claude_json.rs  cloudflared.rs  cloudflared_tests.rs  contract.rs  mcp_config.rs  mcp_instructions.rs  mod.rs  pipeline.rs  plugin.rs  policy.rs  process_compose.rs  process_compose_tests.rs  settings.rs  settings_tests.rs  shell_wrapper.rs  shell_wrapper_tests.rs  skills.rs  system_prompt.rs  system_prompt_tests.rs  telegram.rs  tools.rs
crates/rightclaw/src/config/: mod.rs
crates/rightclaw/src/mcp/: credentials.rs  detect.rs  internal_client.rs  mod.rs  oauth.rs  proxy.rs  reconnect.rs  refresh.rs
crates/rightclaw/src/memory/: circuit.rs  classify.rs  error.rs  guard.rs  hindsight.rs  migrations.rs  mod.rs  prefetch.rs  resilient.rs  retain_queue.rs  status.rs  store.rs  store_tests.rs
crates/rightclaw/src/runtime/: deps.rs  mod.rs  pc_client.rs  pc_client_tests.rs  sandbox.rs  sandbox_tests.rs  state.rs  state_tests.rs
crates/rightclaw/src/tunnel/: health.rs
crates/rightclaw/src/usage/: aggregate.rs  error.rs  format.rs  insert.rs  mod.rs  pricing.rs
crates/rightclaw/tests/: memory_failure_scenarios.rs  policy_apply.rs
crates/rightclaw/tests/common/: mod.rs
(+661 files in other folders)
