[workspace]
members = ["crates/rightclaw", "crates/rightclaw-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0"
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }
walkdir = "2.5"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
