[workspace]
members = ["crates/rightclaw", "crates/rightclaw-cli", "crates/bot"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0"
serde_json = "1.0"
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }
minijinja = "2.18"
walkdir = "2.5"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.50", features = ["full"] }
which = "7.0"
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5"
rmcp = { version = "1.3", default-features = false, features = ["server", "transport-io", "macros"] }
schemars = "1.1"
teloxide = { version = "0.17", default-features = false, features = ["macros", "throttle", "cache-me", "rustls"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6.1"
tokio-util = { version = "0.7", features = ["rt"] }
tempfile = "3.27"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.16"
