[workspace]
members = ["crates/right-agent", "crates/right-core", "crates/right-db", "crates/right-memory", "crates/right-mcp", "crates/right-codegen", "crates/right", "crates/bot"]
resolver = "3"

[workspace.package]
version = "0.2.11"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde-saphyr = "0.0"
serde_json = "1.0"
thiserror = "2.0"
miette = { version = "7.6", features = ["fancy"] }
minijinja = "2.19"
include_dir = "0.7"
walkdir = "2.5"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }
tokio = { version = "1.52", features = ["full"] }
which = "8.0"
rusqlite = { version = "0.39", features = ["bundled"] }
rusqlite_migration = "2.5"
rmcp = { version = "1.6", default-features = false, features = ["client", "server", "transport-io", "transport-streamable-http-server", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "macros"] }
futures = "0.3"
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
sse-stream = "0.2"
schemars = "1.1"
teloxide = { version = "0.17", default-features = false, features = ["macros", "throttle", "cache-me", "rustls", "webhooks-axum"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6.1"
tokio-util = { version = "0.7", features = ["rt"] }
tempfile = "3.27"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.16"
cron-descriptor = "0.1"
sha2 = "0.11"
hmac = "0.13"
rand = "0.10"
base64 = "0.22"
subtle = "2.6"
axum = "0.8"
shlex = "1.3"
tonic = { version = "0.14", features = ["tls-ring", "channel"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
inquire = "0.9"
insta = { version = "1.41", features = ["yaml"] }
notify = "8.0"
notify-debouncer-mini = "0.7"
owo-colors = { version = "4.2", features = ["supports-colors"] }
pulldown-cmark = { version = "0.13", default-features = false }
url = "2.5"
anyhow = "1.0"
fs4 = { version = "1.1", features = ["sync"] }
nix = { version = "0.31", default-features = false, features = ["signal"] }
signal-hook = { version = "0.4", features = ["extended-siginfo"] }
const_format = "0.2"
arc-swap = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
