[package]
name = "right-bot"
version.workspace = true
edition.workspace = true

[dependencies]
right-agent = { path = "../right-agent", version = "*" }
teloxide = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
cron = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
shlex = { workspace = true }
tempfile = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
pulldown-cmark = { workspace = true }
signal-hook = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
whisper-rs = { version = "0.16", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", default-features = false, features = ["metal"] }

[dev-dependencies]
right-agent = { path = "../right-agent", version = "*", features = ["test-support"] }
tokio = { workspace = true, features = ["test-util"] }
tower = "0.5"
futures = { workspace = true }
