[package]
name = "right-agent"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
include_dir = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
right-core = { path = "../right-core" }
right-db = { path = "../right-db" }
right-memory = { path = "../right-memory" }
right-mcp = { path = "../right-mcp" }
right-codegen = { path = "../right-codegen" }
reqwest = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
owo-colors = { workspace = true }
inquire = { workspace = true }
rmcp = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
sse-stream = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
cron-descriptor = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
url = { workspace = true }
tokio-util = { workspace = true }
fs4 = { workspace = true }
nix = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
const_format = { workspace = true }
uuid = { workspace = true }
fastrand = "2"

[features]
test-support = ["right-core/test-support"]

[dev-dependencies]
insta = { workspace = true }
right-core = { path = "../right-core", features = ["test-support"] }
right-db = { path = "../right-db" }
tokio = { version = "1.52", features = ["test-util"] }
tokio-stream = { version = "0.1", features = ["net"] }
wiremock = "0.6"
