[package]
name = "right-core"
version.workspace = true
edition.workspace = true

[features]
test-support = []

[dependencies]
miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
url = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }
fs4 = { workspace = true }
futures = { workspace = true }
nix = { workspace = true }
tempfile = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
which = { workspace = true }
owo-colors = { workspace = true }
inquire = { workspace = true }
http = { workspace = true }
hyper-util = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
right-core = { path = ".", features = ["test-support"] }
tokio-stream = { version = "0.1", features = ["net"] }
