[package]
name = "right-mcp"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
miette = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
right-db = { path = "../right-db" }
rmcp = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sse-stream = { workspace = true }
subtle = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
right-core = { path = "../right-core", features = ["test-support"] }
tempfile = { workspace = true }
tokio = { version = "1.52", features = ["test-util"] }
wiremock = "0.6"
