[package]
name = "right"
version.workspace = true
edition.workspace = true

[[bin]]
name = "right"
path = "src/main.rs"

[dependencies]
right-agent = { path = "../right-agent", version = "*" }
right-bot = { path = "../bot", version = "*" }
right-core = { path = "../right-core" }
right-db = { path = "../right-db" }
clap = { workspace = true }
dirs = { workspace = true }
miette = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde-saphyr = { workspace = true }
which = { workspace = true }
rmcp = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
http = "1.0"
subtle = { workspace = true }
inquire = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
right-core = { path = "../right-core" }
tempfile = "3.27"
tower = { version = "0.5", features = ["util"] }
