[package]
name = "rightclaw"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }

[dev-dependencies]
tempfile = "3.27"
