[package]
name = "rightclaw"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
which = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
tempfile = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"
